[gd_scene load_steps=21 format=3 uid="uid://c6ddyiwl5v63x"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_74m4j"]
[ext_resource type="Texture2D" uid="uid://b23sdrqg5qyrd" path="res://assets/player/DinoSprites - vita.png" id="1_djhvl"]
[ext_resource type="AudioStream" uid="uid://ck8ir328svxpt" path="res://assets/sfx/jump.wav" id="3_jpcfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_762ry"]
atlas = ExtResource("1_djhvl")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndbmw"]
atlas = ExtResource("1_djhvl")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ab7p"]
atlas = ExtResource("1_djhvl")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk0ca"]
atlas = ExtResource("1_djhvl")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyr64"]
atlas = ExtResource("1_djhvl")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv44q"]
atlas = ExtResource("1_djhvl")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tebd"]
atlas = ExtResource("1_djhvl")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xxk1"]
atlas = ExtResource("1_djhvl")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu5fs"]
atlas = ExtResource("1_djhvl")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs4bb"]
atlas = ExtResource("1_djhvl")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3kt"]
atlas = ExtResource("1_djhvl")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewctf"]
atlas = ExtResource("1_djhvl")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh4jh"]
atlas = ExtResource("1_djhvl")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nomka"]
atlas = ExtResource("1_djhvl")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiu54"]
atlas = ExtResource("1_djhvl")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvday"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_762ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndbmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ab7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk0ca")
}],
"loop": true,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyr64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv44q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tebd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xxk1")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu5fs")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs4bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewctf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh4jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nomka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiu54")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_envwg"]
radius = 6.0
height = 16.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 3
collision_layer = 9
collision_mask = 9
script = ExtResource("1_74m4j")

[node name="pSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_hvday")
animation = &"hurt"
autoplay = "idle"

[node name="pShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_envwg")

[node name="dashtimer" type="Timer" parent="."]

[node name="dashagaintimer" type="Timer" parent="."]

[node name="jumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jpcfp")

[connection signal="timeout" from="dashtimer" to="." method="_on_dashtimer_timeout"]
[connection signal="timeout" from="dashagaintimer" to="." method="_on_dashagaintimer_timeout"]
